土日に色を付けた

--- a/app/src/main/res/layout/fragment_mc_calendar.xml
+++ b/app/src/main/res/layout/fragment_mc_calendar.xml
@@ -38,71 +38,47 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="0.5dp"
-        android:paddingTop="0.5dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        style="@style/CmCalendarRow"
         />
     <LinearLayout
         android:id="@+id/cm_calendar_2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="0.5dp"
-        android:paddingTop="0.5dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        style="@style/CmCalendarRow"
         />
     <LinearLayout
         android:id="@+id/cm_calendar_3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="0.5dp"
-        android:paddingTop="0.5dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        style="@style/CmCalendarRow"
         />
     <LinearLayout
         android:id="@+id/cm_calendar_4"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="0.5dp"
-        android:paddingTop="0.5dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        style="@style/CmCalendarRow"
         />
     <LinearLayout
         android:id="@+id/cm_calendar_5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="0.5dp"
-        android:paddingTop="0.5dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        style="@style/CmCalendarRow"
         />
     <LinearLayout
         android:id="@+id/cm_calendar_6"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="0.5dp"
-        android:paddingTop="0.5dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        style="@style/CmCalendarRow"
         />
 </LinearLayout>
