--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,14 @@
         <item name="android:textColor">@color/cm_text_color</item>
     </style>
 
+    <style name="CmCalendarRow">
+        <item name="android:layout_marginTop">0.5dp</item>
+        <item name="android:paddingTop">0.5dp</item>
+        <item name="android:paddingLeft">0.5dp</item>
+        <item name="android:paddingRight">0.5dp</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
     <declare-styleable name="CmDateView">
         <attr name="card_main_image" format="reference"/>
         <attr name="card_title" format="string"/>
