スワイプで月送りを実装

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <integer name="display_years">10</integer>
+    <integer name="display_weeks_num">7</integer>
+    <integer name="display_dates_num">7</integer>
 </resources>
