--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".MainActivity_"
     >
 
     <TextView
@@ -17,15 +17,17 @@
         android:layout_height="wrap_content"/>
 
     <ImageView
+        android:id="@+id/take_a_picture"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/sample"
-        android:onClick="test"
+        android:clickable="true"
         />
     <ImageView
+        android:id="@+id/show_calendar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/sample"
-        android:onClick="move"
+        android:clickable="true"
         />
 </LinearLayout>
