--- a/app/src/main/res/layout/fragment_mc_calendar.xml
+++ b/app/src/main/res/layout/fragment_mc_calendar.xml
@@ -1,11 +1,12 @@
 <LinearLayout
+    android:id="@+id/cm_calendar_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cm_text_color"
-    tools:context="alonedroid.com.calmemo.scene.calendar.CmCalendarFragment"
+    tools:context="alonedroid.com.calmemo.scene.calendar.CmCalendarFragment_"
     >
     <LinearLayout
         android:id="@+id/cm_calendar_title"
