--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,27 +7,58 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context=".MainActivity_"
     >
 
+    <EditText
+        android:id="@+id/action_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="したことを入力してね"
+        android:layout_marginTop="150dp"
+        />
     <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
         android:id="@+id/take_a_picture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/sample"
-        android:clickable="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="写真を取る"
+        android:drawableLeft="@drawable/ic_camera"
+        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
+        />
+    <TextView
+        android:id="@+id/show_calendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="カレンダーを表示"
+        android:drawableLeft="@drawable/ic_calendar"
+        android:layout_below="@id/take_a_picture"
+        android:layout_alignParentLeft="true"
+        />
+    <TextView
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="検索"
+        android:drawableLeft="@drawable/ic_search"
+        android:layout_below="@id/show_calendar"
+        android:layout_alignParentLeft="true"
+        />
+    <TextView
+        android:id="@+id/commit_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="保存"
+        android:drawableLeft="@drawable/ic_done"
+        android:layout_below="@id/search"
+        android:layout_alignParentLeft="true"
         />
     <ImageView
-        android:id="@+id/show_calendar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/sample"
-        android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bg_green_field"
+        android:scaleType="centerCrop"
+        android:layout_alignParentBottom="true"
         />
-</LinearLayout>
+</RelativeLayout>
