--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,32 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="したことを入力してね"
+        android:hint="したことを入力してね"
         android:layout_marginTop="150dp"
-        />
-    <TextView
-        android:id="@+id/take_a_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="写真を取る"
-        android:drawableLeft="@drawable/ic_camera"
-        android:layout_centerInParent="true"
-        android:layout_alignParentLeft="true"
-        />
-    <TextView
-        android:id="@+id/show_calendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="カレンダーを表示"
-        android:drawableLeft="@drawable/ic_calendar"
-        android:layout_below="@id/take_a_picture"
-        android:layout_alignParentLeft="true"
+        android:singleLine="true"
         />
     <TextView
         android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="検索"
+        android:gravity="center|center"
         android:drawableLeft="@drawable/ic_search"
         android:layout_below="@id/show_calendar"
         android:layout_alignParentLeft="true"
@@ -50,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="保存"
+        android:gravity="center|center"
         android:drawableLeft="@drawable/ic_done"
         android:layout_below="@id/search"
         android:layout_alignParentLeft="true"
@@ -60,5 +45,25 @@
         android:src="@drawable/bg_green_field"
         android:scaleType="centerCrop"
         android:layout_alignParentBottom="true"
+        />
+    <TextView
+        android:id="@+id/take_a_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="写真を取る"
+        android:gravity="center|center"
+        android:drawableLeft="@drawable/ic_camera"
+        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
+        />
+    <TextView
+        android:id="@+id/show_calendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="カレンダーを表示"
+        android:gravity="center|center"
+        android:drawableLeft="@drawable/ic_calendar"
+        android:layout_below="@id/take_a_picture"
+        android:layout_alignParentLeft="true"
         />
 </RelativeLayout>
