--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:text="検索"
         android:gravity="center|center"
         android:drawableLeft="@drawable/ic_search"
-        android:layout_below="@id/show_calendar"
+        android:layout_below="@id/action_name"
         android:layout_alignParentLeft="true"
         />
     <TextView
@@ -39,13 +39,6 @@
         android:layout_below="@id/search"
         android:layout_alignParentLeft="true"
         />
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_green_field"
-        android:scaleType="centerCrop"
-        android:layout_alignParentBottom="true"
-        />
     <TextView
         android:id="@+id/take_a_picture"
         android:layout_width="wrap_content"
@@ -53,7 +46,7 @@
         android:text="写真を取る"
         android:gravity="center|center"
         android:drawableLeft="@drawable/ic_camera"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/commit_action"
         android:layout_alignParentLeft="true"
         />
     <TextView
@@ -65,5 +58,12 @@
         android:drawableLeft="@drawable/ic_calendar"
         android:layout_below="@id/take_a_picture"
         android:layout_alignParentLeft="true"
+        />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bg_green_field"
+        android:scaleType="centerCrop"
+        android:layout_alignParentBottom="true"
         />
 </RelativeLayout>
