--- a/app/src/main/res/layout/cm_widget_layout.xml
+++ b/app/src/main/res/layout/cm_widget_layout.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5sp"
                 >
     <ImageView
-        android:id="@+id/button"
+        android:id="@+id/cm_widget_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/ic_camera"
+        android:src="@drawable/ic_camera"
+        android:scaleType="centerCrop"
         />
 </RelativeLayout>
