--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="dimen_space_80dp">80dp</dimen>
     <dimen name="dimen_space_88dp">88dp</dimen>
     <dimen name="dimen_zpos_s">88dp</dimen>
+    <dimen name="dimen_frame">1dp</dimen>
 </resources>
