--- a/app/src/main/res/xml/cm_widget_provider.xml
+++ b/app/src/main/res/xml/cm_widget_provider.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:initialLayout="@layout/cm_widget_layout"
+                    android:initialLayout="@layout/widget_cm_layout"
                     android:minHeight="40dp"
                     android:minWidth="40dp"
                     android:previewImage="@drawable/ic_launcher"
