--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,13 +1,49 @@
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="alonedroid.com.calmemo.scene.album.CmAlbumFragment"
     >
+    <LinearLayout
+        android:id="@+id/cm_calendar_title"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingLeft="0.5dp"
+        android:paddingRight="0.5dp"
+        android:orientation="vertical"
+        android:background="@color/white"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center|center"
+            android:layout_weight="1"
+            android:text="カレンダー"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            >
+            <ImageView
+                android:id="@+id/album_calendar_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_calendar"
+                android:tint="@color/cm_text_sunday_color"
+                />
+        </LinearLayout>
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/fragment_album"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    </ScrollView>
+        android:layout_height="0dp"
+        android:layout_weight="6"
+        />
+</LinearLayout>
