--- a/app/src/main/res/layout/fragment_image_list.xml
+++ b/app/src/main/res/layout/fragment_image_list.xml
@@ -1,9 +1,14 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_image_list"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     tools:context="alonedroid.com.calmemo.fragment.ImageListFragment"
-    />
+    >
+    <LinearLayout
+        android:id="@+id/fragment_image_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        />
+</ScrollView>
