--- a/app/src/main/res/layout/fragment_cm_album.xml
+++ b/app/src/main/res/layout/fragment_cm_album.xml
@@ -17,13 +17,6 @@
         android:orientation="vertical"
         android:background="@color/white"
         >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center|center"
-            android:layout_weight="1"
-            android:text="カレンダー"
-            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -39,6 +32,13 @@
                 android:tint="@color/cm_text_sunday_color"
                 />
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center|center"
+            android:layout_weight="1"
+            android:text="@string/cm_calendar_title"
+            />
     </LinearLayout>
     <FrameLayout
         android:id="@+id/fragment_album"
