--- a/app/src/main/res/layout/fragment_cm_album.xml
+++ b/app/src/main/res/layout/fragment_cm_album.xml
@@ -5,45 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="alonedroid.com.calmemo.scene.album.CmAlbumFragment"
     >
-    <LinearLayout
+
+    <RelativeLayout
         android:id="@+id/cm_calendar_title"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
-        android:orientation="vertical"
-        android:background="@color/white"
+        android:layout_height="85dp"
+        android:paddingLeft="@dimen/dimen_space_8dp"
+        android:paddingRight="@dimen/dimen_space_8dp"
+        android:background="@color/grey_1"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            >
-            <ImageView
-                android:id="@+id/album_calendar_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_calendar"
-                android:tint="@color/cm_text_sunday_color"
-                />
-        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="42.5dp"
             android:gravity="center|center"
-            android:layout_weight="1"
             android:text="@string/cm_calendar_title"
+            android:layout_alignParentTop="true"
             />
-    </LinearLayout>
+
+        <ImageView
+            android:id="@+id/album_calendar_icon"
+            android:layout_width="42.5dp"
+            android:layout_height="42.5dp"
+            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
+            android:tint="@color/cm_text_sunday_color"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            />
+    </RelativeLayout>
+
+    <include layout="@layout/line"/>
+
+    <TextView
+        android:id="@+id/cm_album_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/cm_text_color"
+        android:paddingTop="@dimen/dimen_space_8dp"
+        />
+
     <FrameLayout
         android:id="@+id/fragment_album"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="1"
         />
 </LinearLayout>
