--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,19 @@
 <resources>
 
     <color name="cm_text_color">#A59E99</color>
-    <color name="cm_text_sunday_color">#FF9e9e</color>
-    <color name="cm_text_saturday_color">#94c0ff</color>
+    <color name="cm_text_sunday_color">#FF9E9E</color>
+    <color name="cm_text_saturday_color">#94C0FF</color>
+    <color name="alpha">#00000000</color>
     <color name="pink_1">#F8BBD0</color>
+    <color name="pink_3">#F06292</color>
+    <color name="thin_pink_3">#AEF06292</color>
     <color name="pink_4">#EC407A</color>
     <color name="green_4">#66BB6A</color>
     <color name="blue_1">#BBDEFB</color>
+    <color name="grey_1">#F5F5F5</color>
     <color name="white">#FFFFFF</color>
     <color name="white_filter">#66FFFFFF</color>
+    <color name="thin_black">#AE000000</color>
+    <color name="thin_white">#AEFFFFFF</color>
 
 </resources>
