--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -5,4 +5,5 @@
     <integer name="display_col">7</integer>
     <integer name="display_row">6</integer>
     <integer name="save_image_length">200</integer>
+    <integer name="anim_duration">150</integer>
 </resources>
