新広告の追加

--- a/app/src/main/res/layout/fragment_cm_photographs.xml
+++ b/app/src/main/res/layout/fragment_cm_photographs.xml
@@ -64,4 +64,9 @@
         android:layout_below="@id/cm_photographs_bar"
         android:contentDescription="@string/desc_main_image"
         />
+
+    <fragment
+        android:name="alonedroid.com.calmemo.fragment.CmAdAstaFragment_"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 </RelativeLayout>
