--- a/app/src/main/res/layout/fragment_cm_hint.xml
+++ b/app/src/main/res/layout/fragment_cm_hint.xml
@@ -1,7 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -12,29 +11,29 @@
         android:id="@+id/cm_photographs_title"
         android:layout_width="match_parent"
         android:layout_height="85dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/grey_1"
         android:paddingLeft="@dimen/dimen_space_8dp"
         android:paddingRight="@dimen/dimen_space_8dp"
-        android:background="@color/grey_1"
-        android:layout_alignParentTop="true"
         >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="42.5dp"
+            android:layout_alignParentTop="true"
             android:gravity="center|center"
             android:text="@string/cm_hint_title"
-            android:layout_alignParentTop="true"
             />
 
         <ImageView
             android:id="@+id/cm_hint_back_view"
             android:layout_width="42.5dp"
             android:layout_height="42.5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:contentDescription="@string/desc_page_back"
             android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
             android:tint="@color/cm_text_sunday_color"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:contentDescription="@string/desc_page_back"
             />
     </RelativeLayout>
 
@@ -47,22 +46,17 @@
         android:orientation="horizontal"
         />
 
-    <LinearLayout
-        android:id="@+id/cm_hint_ad"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
+    <net.nend.android.NendAdIconLayout
+        android:id="@+id/ad_view"
+        NendApiKey="18151642e3c0017670c10d242cdcb73817764f81"
+        NendIconCount="4"
+        NendSpotId="373657"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         />
-
-    <ScrollView
-        android:id="@+id/cm_hint_main_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/cm_hint_ad"
-        android:layout_below="@id/cm_hint_bar"
-        android:contentDescription="@string/desc_main_image"
-        />
-
+    <!-- 広告が気に入らない
     <com.google.android.gms.ads.AdView
         android:id="@+id/ad_view"
         android:layout_width="wrap_content"
@@ -72,4 +66,20 @@
         ads:adUnitId="ca-app-pub-3760137741555384/1892368555"
         ads:adSize="BANNER"
         />
+    -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/ad_view"
+        android:layout_below="@id/cm_hint_bar"
+        android:contentDescription="@string/desc_main_image"
+        >
+
+        <LinearLayout
+            android:id="@+id/cm_hint_main_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            />
+    </ScrollView>
 </RelativeLayout>
