--- a/app/src/main/res/layout/fragment_cm_photographs.xml
+++ b/app/src/main/res/layout/fragment_cm_photographs.xml
@@ -66,7 +66,10 @@
         />
 
     <fragment
+        android:id="@+id/cm_photographs_ads"
         android:name="alonedroid.com.calmemo.fragment.CmAdAstaFragment_"
         android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
